--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ h3{
     font-size: 20px;
     font-family:"Roboto", sans-serif ;
     font-weight: 500;
+    line-height: 24px;
 }
 
 .h2{
@@ -71,6 +72,7 @@ h3{
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     text-align: center;
+    line-height: 24px;
 }
 
 .sect2-text{
@@ -78,6 +80,7 @@ h3{
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     color: #434455;
+    line-height: 24px;
 
 }
 
@@ -115,6 +118,26 @@ h3{
 }
 
 /* sect4*/
+.sect4-ul-img{
+    width: 360px;
+    height: 320px;
+}
+
+.sect4-ul-title{
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    font-family:"Roboto", sans-serif;
+}
+
+.sect4-ul-text{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    font-family:"Roboto", sans-serif;
+    color: #434455;
+}
+
 
 .footer{
     background-color: #2E2F42;
@@ -124,7 +147,7 @@ h3{
     color: #ffff;
     text-transform: uppercase;
     font-size: 18px;
-    line-height: 21px;
+    line-height: 24px;
     font-family:"Roboto", sans-serif ;
     font-weight: 700;
 }
